<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/top_CL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/main_movie_poster"
                android:layout_width="0dp"
                android:layout_height="234dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/da_main_movie_poster_description"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/main_movie_poster_guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/main_bg" />

            <ImageView
                android:id="@+id/side_movie_poster"
                android:layout_width="129dp"
                android:layout_height="191dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/da_side_movie_poster_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/main_movie_poster_guideline"
                app:srcCompat="@drawable/side_bg" />

            <android.support.constraint.Guideline
                android:id="@+id/main_movie_poster_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="231dp" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="8dp"
                android:text="@string/da_moview_name_default_text"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/side_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/main_movie_poster_guideline" />

            <TextView
                android:id="@+id/released_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="17dp"
                android:text="@string/da_released_title_default_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/side_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/movie_name" />

            <TextView
                android:id="@+id/released_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/da_release_date_default_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/released_title"
                app:layout_constraintTop_toBottomOf="@+id/movie_name" />

            <Button
                android:id="@+id/btn_run_trailer"
                android:layout_width="158dp"
                android:layout_height="53dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="33dp"
                android:background="@android:color/holo_red_light"
                android:text="@string/da_btn_run_trailer_text"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/side_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/released_title" />

            <TextView
                android:id="@+id/overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/da_overview_title_text"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/side_movie_poster" />

            <TextView
                android:id="@+id/overview_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:paddingStart="0dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="10dp"
                android:text="@string/da_default_overview_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_title"
                tools:text="Overview Text" />

        </android.support.constraint.ConstraintLayout>


    </ScrollView>




</android.support.constraint.ConstraintLayout>